# DeltaPorts

./: .gitignore  README  README.md  dports.toml.example  dportsv3
.claude/: CLAUDE.md
scripts/generator/: README  bulk_dports.sh  cascade.sh  category-makefiles.sh  cron_dports.sh  dports-daemon.sh  dports-default.conf  dports.toml.example  dports_step1_harness.py  dports_v1.py  dportsd  failure_status.sh  generate_ports_INDEX.sh  hook_bulk_build_start.sh  hook_port_build_failure.sh  hook_port_build_success.sh  identify-custom-nobody.sh  make_queue.sh  mask_NO_PACKAGE.sh  mass_convert.py  merge-mk.sh  merge.sh  never_tried.sh  prune.sh  pyproject.toml  quicksync.sh  ramo_bulk_list.sh  ramo_syncme_bulk_list.sh  remove_one.sh  report_unbuilt.sh  rollingUPDATING.sh  stinkers.sh  success_status.sh  sync1.sh  tailor_bulk_list.sh  transfer_merge.sh  true_bulk_list.sh
scripts/generator/dports/: __init__.py  __main__.py  cli.py  compose.py  config.py  integration.py  merge.py  migrate.py  models.py  overlay.py  quarterly.py  selection.py  special.py  state.py  transform.py  utils.py  validate.py
scripts/generator/dportsv3/: __init__.py  __main__.py  artifact_store.py  cli.py  compat.py  compose.py  compose_discovery.py  compose_models.py  compose_patching.py  compose_reporting.py  compose_stages.py  fsutils.py  plan_types.py  policy.py  system_replacements.py  verify_fix.py
scripts/generator/tests/: __init__.py  conftest.py  dportsv3_testutils.py  test_absorb_makefile.py  test_absorb_remove.py  test_agent_convert.py  test_agent_dops_classify.py  test_apply_intent_tool.py  test_artifact_store_bundle_target.py  test_attempt_boundary_intent_summary.py  test_bootstrap_decision.py  test_bundle_branch_drop_per_job.py  test_bundle_branch_lifecycle.py  test_bundle_discard.py  test_bundle_operator_actions.py  test_bundle_release.py  test_bundle_reopen.py  test_bundle_retry.py  test_bundle_takeover.py  test_bundle_verification_endpoint.py  test_changes_diff_semantics.py  test_compose_reconcile_integration.py  test_context.py  test_convert_effective_ops_check.py  test_convert_payload_includes_triage.py  test_convert_status_type.py  test_decision.py  test_decision_parity.py  test_decision_step6.py  test_delivery_accept_integration.py  test_delivery_diff.py  test_delivery_git.py  test_delivery_github.py  test_delivery_http.py  test_delivery_local_patch.py  test_delivery_message_format.py  test_delivery_status_update.py  test_dev_env_apply_and_build.py  test_dev_env_health_cli.py  test_dev_env_log.py  (+105 more)
(+29562 files in other folders)
