[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dports-dragonfly"
version = "0.0.1-alpha"
description = "DragonFly BSD Ports overlay management tool"
readme = "README"
requires-python = ">=3.11"
license = "BSD-2-Clause"
authors = [
    { name = "DragonFly BSD Project" }
]
keywords = ["dragonfly", "bsd", "ports", "freebsd", "dports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: BSD :: DragonFly",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
dports = "dports.cli:main"

[project.urls]
Homepage = "https://github.com/DragonFlyBSD/DeltaPorts"
Repository = "https://github.com/DragonFlyBSD/DeltaPorts"

[tool.hatch.build.targets.wheel]
packages = ["dports"]
